2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/main.c: added --license command-line option.

	* docs/gimp.1.in: documented the new option.

2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockbook.c: set the source dockable insensitive
	during the drag operation.

2005-12-29  Simon Budig  <simon@gimp.org>

	* app/vectors/gimpbezierstroke.[ch]: extended
	gimp_bezier_stroke_new_ellipse() with an "angle" parameter.
	* app/vectors/gimpvectors-import.c: changed accordingly, untabbified.

	* tools/pdbgen/pdb/vectors.pdb: added PDB-wrappers for
	      vectors_bezier_stroke_new_moveto
	      vectors_bezier_stroke_lineto
	      vectors_bezier_stroke_conicto
	      vectors_bezier_stroke_cubicto
	      vectors_bezier_stroke_new_ellipse
	
	Undo does not work properly yet.

	* app/pdb/internal_procs.c
	* app/pdb/vectors_cmds.c
	* libgimp/gimpvectors_pdb.[ch]: regenerated.

2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockable.c (gimp_dockable_expose_event): moved
	some code to an internal helper function.

2005-12-29  DindinX  <dindinx@gimp.org>

	* plug-ins/common/waves.c: small cleanups

2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockable.[ch]: invalidate stored coordinates on
	button release.

2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockbook.c: let the drag icon mimic the
	appearance of a notebook tab.

2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockbook.c (gimp_dockbook_tab_drag_begin): use
	the width of the source widget as the minimum width of the drag icon.

2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockable.[ch]: store coordinates of last button
	press event.

	* app/widgets/gimpdockbook.c (gimp_dockbook_tab_drag_begin): set
	the drag hotspot to the mouse position that started the drag.

2005-12-29  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpdockable.c (gimp_dockable_expose_event): draw the