@@ -1208,12 +1208,9 @@ gimp_display_shell_canvas_tool_events (GtkWidget        *canvas,
               }
             else
               {
-                GimpDialogFactory *dialog_factory;
+                gimp_dialog_factories_toggle ();
 
-                dialog_factory = gimp_dialog_factory_from_name ("toolbox");
-
-                /*  Hide or show all dialogs  */
-                gimp_dialog_factories_toggle (dialog_factory, FALSE);
+                gdk_window_focus (canvas->window, time);
               }
 
             return_val = TRUE;
