@@ -153,13 +153,14 @@ void        gimp_dialog_factory_add_foreign       (GimpDialogFactory *factory,
 void        gimp_dialog_factory_remove_dialog     (GimpDialogFactory *factory,
 						   GtkWidget         *dialog);
 
+void        gimp_dialog_factory_show_toolbox      (GimpDialogFactory *toolbox_factory);
+
+
 void        gimp_dialog_factories_session_save    (GimpConfigWriter  *writer);
 void        gimp_dialog_factories_session_restore (void);
 void        gimp_dialog_factories_session_clear   (void);
 
-void        gimp_dialog_factories_toggle          (GimpDialogFactory *toolbox_factory,
-                                                   gboolean           ensure_visibility);
-
+void        gimp_dialog_factories_toggle          (void);
 void        gimp_dialog_factories_set_busy        (void);
 void        gimp_dialog_factories_unset_busy      (void);
 
